--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "cra-template": "1.3.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "react-wavify": "^1.11.1",
+    "tsparticles": "^3.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
