--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
     "react-wavify": "^1.11.1",
+    "three": "^0.178.0",
     "tsparticles": "^3.8.1"
   },
   "scripts": {
